<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/ID_REGISTER_USERNAME_EDIT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_register"
        android:inputType="text" />

    <EditText
        android:id="@+id/ID_REGISTER_EMAIL_EDIT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_register"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/ID_REGISTER_PASSWORD_EDIT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_register"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ID_REGISTER_PASSWORDCONFIRM_EDIT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordconfirm_register"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ID_REGISTER_SUBMIT_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit_register" />

        <Button
            android:id="@+id/ID_REGISTER_REINPUT_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reinput_register" />
    </LinearLayout>

</LinearLayout>